# ls *.result | sort | sed -e 's/^/\t/'
EXTRA_DIST =					\
	btree.result				\
	create_table.result			\
	delete.result				\
	drop_database.result			\
	drop_table.result			\
	fulltext.result				\
	hash.result				\
	insert.result				\
	select_all.result			\
	select_pkey.result			\
	show_create_table.result		\
	show_table_status.result		\
	update.result
