# ls *.test | sort | sed -e 's/^/\t/'
EXTRA_DIST =					\
	btree.test				\
	create_table.test			\
	delete.test				\
	drop_database.test			\
	drop_table.test				\
	fulltext.test				\
	hash.test				\
	insert.test				\
	select_all.test				\
	select_pkey.test			\
	show_create_table.test			\
	show_table_status.test			\
	update.test
