# echo "EXTRA_DIST = \\"; ls *.test | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	auto_increment.test \
	binlog.test \
	btree.test \
	count_performance.test \
	create_table.test \
	create_table_wrapper.test \
	delete.test \
	drop_database.test \
	drop_table.test \
	flush_logs.test \
	fulltext.test \
	fulltext_wrapper.test \
	hash.test \
	information_schema.test \
	insert.test \
	insert_wrapper.test \
	last_insert_grn_id.test \
	log_level.test \
	order_limit_performance.test \
	replace.test \
	select_all.test \
	select_pkey.test \
	select_secondary_key.test \
	show_create_table.test \
	show_table_status.test \
	tinyint.test \
	update.test \
	$(NULL)
