# echo "EXTRA_DIST = \\"; ls *.result | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	auto_increment.result \
	auto_increment_text.result \
	binlog.result \
	btree.result \
	count_performance.result \
	create_table.result \
	delete.result \
	drop_database.result \
	drop_table.result \
	flush_logs.result \
	fulltext.result \
	geometry.result \
	hash.result \
	information_schema.result \
	insert.result \
	last_insert_grn_id.result \
	log_level.result \
	order_limit_performance.result \
	replace.result \
	select_all.result \
	select_pkey.result \
	select_secondary_key.result \
	show_create_table.result \
	show_table_status.result \
	tinyint.result \
	update.result \
	$(NULL)
