# echo "EXTRA_DIST = \\"; ls *.result | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	auto_increment.result \
	auto_increment_text.result \
	binlog.result \
	btree.result \
	count_performance.result \
	create_table.result \
	delete_fulltext_column.result \
	delete_id_index_hash_no_unique.result \
	delete_id_index_hash_unique.result \
	delete_normal_column.result \
	drop_database.result \
	drop_table.result \
	dry_write_delete.result \
	dry_write_insert.result \
	dry_write_update.result \
	flush_logs.result \
	fulltext_boolean_mode_pragma_default_operator.result \
	fulltext_index_recreate.result \
	fulltext_insert_select.result \
	fulltext_insert_values.result \
	fulltext_multiple_column_index_delete.result \
	fulltext_multiple_column_index_insert.result \
	fulltext_multiple_column_index_recreate.result \
	fulltext_multiple_column_index_update.result \
	fulltext_multiple_index.result \
	fulltext_not_match_against.result \
	fulltext_parser_comment.result \
	fulltext_parser_default.result \
	fulltext_search_ascii.result \
	fulltext_search_japanese.result \
	geometry_contains.result \
	hash_index_id_normal.result \
	hash_index_id_primary.result \
	hash_index_id_unique.result \
	hash_index_normal_column_insert.result \
	information_schema.result \
	insert.result \
	last_insert_grn_id.result \
	log_level.result \
	multiple_column_index_delete.result \
	multiple_column_index_int.result \
	multiple_column_index_recreate.result \
	multiple_column_index_string.result \
	multiple_column_index_update.result \
	multiple_column_index_varchar.result \
	multiple_column_primary_key_delete.result \
	multiple_column_primary_key_int.result \
	multiple_column_primary_key_update.result \
	order_limit_performance.result \
	replace.result \
	select_all.result \
	select_pkey.result \
	select_secondary_key.result \
	show_create_table.result \
	show_table_status.result \
	tinyint.result \
	update_by_last_insert_grn_id.result \
	update_fulltext.result \
	update_id_hash_index.result \
	update_id_unique_hash_index.result \
	update_int.result \
	update_virtual_column.result \
	$(NULL)
