# echo "EXTRA_DIST = \\"; ls *.test | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	auto_increment.test \
	auto_increment_text.test \
	binlog.test \
	btree.test \
	count_performance.test \
	create_table.test \
	delete_fulltext_column.test \
	delete_id_index_hash_no_unique.test \
	delete_id_index_hash_unique.test \
	delete_normal_column.test \
	drop_database.test \
	drop_table.test \
	flush_logs.test \
	fulltext_insert_select.test \
	fulltext_insert_values.test \
	fulltext_multiple_index.test \
	fulltext_not_match_against.test \
	fulltext_parser_comment.test \
	fulltext_parser_default.test \
	fulltext_search_ascii.test \
	fulltext_search_japanese.test \
	geometry_contains.test \
	hash_index_id_normal.test \
	hash_index_id_primary.test \
	hash_index_id_unique.test \
	hash_index_normal_column_insert.test \
	information_schema.test \
	insert.test \
	last_insert_grn_id.test \
	log_level.test \
	multiple_column_index_delete.test \
	multiple_column_index_int.test \
	multiple_column_index_text.test \
	multiple_column_index_update.test \
	multiple_column_primary_key_delete.test \
	multiple_column_primary_key_int.test \
	multiple_column_primary_key_update.test \
	order_limit_performance.test \
	replace.test \
	select_all.test \
	select_pkey.test \
	select_secondary_key.test \
	show_create_table.test \
	show_table_status.test \
	tinyint.test \
	update_by_last_insert_grn_id.test \
	update_fulltext.test \
	update_id_hash_index.test \
	update_id_unique_hash_index.test \
	update_int.test \
	update_virtual_column.test \
	$(NULL)
