# echo "EXTRA_DIST = \\"; ls *.result | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	binlog.result \
	create_table.result \
	delete.result \
	fulltext.result \
	fulltext_drop_index.result \
	fulltext_many_records.result \
	fulltext_multiple_column_index_delete.result \
	fulltext_multiple_column_index_insert.result \
	fulltext_multiple_column_index_update.result \
	fulltext_myisam.result \
	insert.result \
	update.result \
	$(NULL)
