# echo "EXTRA_DIST = \\"; ls *.test | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	create_table.test \
	delete.test \
	fulltext.test \
	fulltext_many_records.test \
	fulltext_multiple_column_index_delete.test \
	fulltext_multiple_column_index_insert.test \
	fulltext_multiple_column_index_update.test \
	fulltext_myisam.test \
	insert.test \
	update.test \
	$(NULL)
