# echo "EXTRA_DIST = \\"; ls *.test | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	binlog.test \
	create_table.test \
	delete.test \
	fulltext_drop_index.test \
	fulltext_insert_select.test \
	fulltext_insert_values.test \
	fulltext_many_records.test \
	fulltext_multiple_column_index_delete.test \
	fulltext_multiple_column_index_insert.test \
	fulltext_multiple_column_index_update.test \
	fulltext_myisam.test \
	fulltext_not_match_against.test \
	fulltext_search_ascii.test \
	fulltext_search_japanese.test \
	insert.test \
	update.test \
	$(NULL)
