# echo "EXTRA_DIST = \\"; ls *.test | sort | sed -e 's/^/\t/' -e 's,$, \\,'; echo -n "\t\$(NULL)"
EXTRA_DIST = \
	auto_increment_text.test \
	binlog.test \
	create_table.test \
	delete.test \
	dry_write_delete.test \
	dry_write_insert.test \
	dry_write_update.test \
	fulltext_boolean_mode_pragma_default_operator.test \
	fulltext_index_recreate.test \
	fulltext_insert_select.test \
	fulltext_insert_values.test \
	fulltext_many_records.test \
	fulltext_multiple_column_index_delete.test \
	fulltext_multiple_column_index_insert.test \
	fulltext_multiple_column_index_recreate.test \
	fulltext_multiple_column_index_update.test \
	fulltext_multiple_index.test \
	fulltext_myisam.test \
	fulltext_not_match_against.test \
	fulltext_parser_comment.test \
	fulltext_search_ascii.test \
	fulltext_search_japanese.test \
	geometry_contains.test \
	geometry_delete.test \
	geometry_update.test \
	insert.test \
	order_limit_performance.test \
	update_fulltext.test \
	update_int.test \
	$(NULL)
